# fury_terminal

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  build.ps1  build.sh  jitpack.yml
.github/workflows/: ci.yml
android/: settings.gradle.kts
android/sample-app/: build.gradle.kts
android/sample-app/src/main/: AndroidManifest.xml
android/sample-app/src/main/java/com/furyform/sample/: MainActivity.kt  TerminalScreen.kt  TerminalViewModel.kt
android/sample-app/src/main/res/drawable/: ic_launcher_foreground.xml
android/sample-app/src/main/res/values/: strings.xml  themes.xml
android/sample-app/src/test/java/com/furyform/sample/: TerminalViewModelTest.kt
android/terminal-lib/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
android/terminal-lib/src/androidTest/java/com/furyform/terminal/: NativePTYTest.kt  TerminalSessionTest.kt
android/terminal-lib/src/main/: AndroidManifest.xml
android/terminal-lib/src/main/java/com/furyform/terminal/: NativePTY.kt  TerminalException.kt  TerminalSession.kt
initd/: 99-ftyd
magisk/: customize.sh  module.prop  service.sh
native/: CMakeLists.txt  ftyd.c  libterm.c  protocol.h  pty_common.h
